# bevy_garden

./: Cargo.toml  README.md
assets/: level.scn.ron
assets/tools/apple/: config.tool.ron  prefab.scn.ron
assets/tools/bush/: config.tool.ron  prefab.scn.ron
assets/tools/flower/: config.tool.ron  prefab.scn.ron
assets/tools/tree_large/: config.tool.ron  prefab.scn.ron
assets/tools/tree_small/: config.tool.ron  prefab.scn.ron
crates/apple/: Cargo.toml
crates/apple/src/: components.rs  lib.rs  plugin.rs  resource.rs
crates/background/: Cargo.toml
crates/background/src/: components.rs  lib.rs  plugin.rs
crates/bevy_helpers/: Cargo.toml
crates/bevy_helpers/src/: debug.rs  generic_systems.rs  hierarchy.rs  lib.rs  material.rs
crates/bevy_scene_utils/: Cargo.toml
crates/bevy_scene_utils/src/: commands.rs  lib.rs  utils.rs
crates/bush/: Cargo.toml
crates/bush/src/: components.rs  plugin.rs  resource.rs
crates/duplicate_tool/: Cargo.toml
crates/duplicate_tool/src/: commands.rs  lib.rs  plugin.rs  types.rs
crates/editor/: Cargo.toml
crates/editor/src/: delete_events.rs  editor_cursor.rs  lib.rs  pick_utils.rs  plugin.rs  tool_stack.rs  tools.rs
crates/editor/src/editor_cursor/: attachable_plugin.rs  object_plugin.rs  plugin.rs  run_conditions.rs  status_plugin.rs  types.rs
crates/editor/src/tool_stack/: plugin.rs  types.rs
crates/editor/src/tools/: tool_library.rs  types.rs
crates/flower/: Cargo.toml
crates/flower/src/: components.rs  plugin.rs  resource.rs
crates/game_effects/: Cargo.toml
crates/game_effects/src/: lib.rs  plugin.rs  selected.rs  transparency.rs
crates/game_state/: Cargo.toml
crates/game_state/src/: components.rs  config.rs  events.rs  game_camera.rs  lib.rs  plugin.rs  sets.rs  state.rs
crates/game_state/src/state/: game_state.rs  pause_state.rs  play_state.rs  plugin.rs  run_conditions.rs
crates/pointer_tool/: Cargo.toml
crates/pointer_tool/src/: lib.rs  plugin.rs  types.rs
crates/prefab_tool/: Cargo.toml
crates/prefab_tool/src/: assets.rs  attachable_cursor.rs  commands.rs  lib.rs  object_cursor.rs  plugin.rs  types.rs
crates/save/: .gitignore  Cargo.toml
crates/save/examples/: simple_save.rs
crates/save/src/: app.rs  commands.rs  events.rs  lib.rs  plugin.rs  registry.rs  rollbacks.rs  types.rs  utils.rs
crates/save/src/commands/: save_level.rs  save_rollback.rs  utils.rs  write_scene_to_world.rs
crates/tree/: Cargo.toml
crates/tree/src/: components.rs  plugin.rs  resource.rs
src/: config.rs  game.rs  main.rs  ui.rs  widgets.rs
src/game/: failed_to_load_menu.rs  new_level.rs  plugin.rs  tool_loader.rs  tool_panel.rs
src/ui/: constants.rs  plugin.rs  widgets.rs
src/ui/widgets/: menu_screen.rs  text_heading.rs  tool_button.rs  tool_panel.rs
src/widgets/: menu_screen.rs  plugin.rs  text_heading.rs  tool_button.rs  tool_panel.rs
