[package]
name = "duplicate_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Workspace crates
game_state = { path = "../game_state" }
editor = { path = "../editor" }
bevy_helpers = { path = "../bevy_helpers" }
bevy_scene_utils = { path = "../bevy_scene_utils" }
save = { path = "../save" }

# Bevy crates
bevy = { workspace = true }
bevy_mod_raycast = { workspace = true }
