[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Workspace Crates
game_state = { path = "../game_state" }
save = { path = "../save" }

# Bevy Crates
bevy = { workspace = true }
bevy_mod_raycast = { workspace = true }
