[package]
name = "game_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Workspace Crates
game_state = { path = "../game_state" }
bevy_helpers = { path = "../bevy_helpers" }

# Bevy crates
bevy = { workspace = true }
