[package]
name = "game_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Workspace Crates
bevy_helpers = { path = "../bevy_helpers" }
save = { path = "../save" }

# Bevy Crates
bevy = { workspace = true }
bevy_asset_loader = { workspace = true }
