[package]
name = "prefab_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Workspace Crates
game_state = { path = "../game_state" }
bevy_helpers = { path = "../bevy_helpers" }
save = { path = "../save" }
bevy_scene_utils = { path = "../bevy_scene_utils" }
editor = { path = "../editor" }

# Bevy Crates
bevy = { workspace = true }
bevy_common_assets = { workspace = true }
bevy_mod_raycast = { workspace = true }

# Non-bevy crates
serde = { workspace = true }
