[package]
name = "tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game_state = { path = "../game_state" }
game_effects = { path = "../game_effects" }
bevy_helpers = { path = "../bevy_helpers" }
save = { path = "../save" }

bevy = { workspace = true }
